# vllm

vllm-train/: ARCHITECTURE.md  CONTINUAL_LEARNING.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
vllm-train/examples/: basic_lora_finetune.py
vllm-train/tests/: __init__.py  test_config.py
vllm-train/vllm_train/: __init__.py  config.py  continual_llm.py  patch.py  trainer.py
vllm-train/vllm_train/data/: __init__.py  dataset.py
vllm-train/vllm_train/dpo/: __init__.py  async_trainer.py  efficient_dpo.py  feedback_collector.py
vllm-train/vllm_train/integration/: __init__.py
vllm-train/vllm_train/lora/: __init__.py
vllm-train/vllm_train/losses/: __init__.py  causal_lm.py  dpo.py
vllm-train/vllm_train/rlhf/: __init__.py
vllm/lora/: models.py
vllm/model_executor/models/: qwen2_5_vl.py  qwen2_vl.py
vllm/v1/worker/: gpu_model_runner.py
