[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vllm-train"
version = "0.1.0"
description = "LoRA fine-tuning library built on top of vLLM"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "vLLM-Train Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["llm", "fine-tuning", "lora", "vllm", "training", "rlhf"]

dependencies = [
    "vllm>=0.6.0",
    "transformers>=4.40.0",
    "peft>=0.10.0",
    "torch>=2.0.0",
    "datasets>=2.0.0",
    "accelerate>=0.25.0",
]

[project.optional-dependencies]
rlhf = [
    "trl>=0.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "vllm-train[rlhf,dev]",
]

[project.urls]
Homepage = "https://github.com/vllm-project/vllm-train"
Documentation = "https://github.com/vllm-project/vllm-train#readme"
Repository = "https://github.com/vllm-project/vllm-train"

[tool.hatch.build.targets.wheel]
packages = ["vllm_train"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]  # Line length handled by black

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
